--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/checkout@v4
       - name: Run intercept with mock policy
         run: |
-          ./intercept audit --policy playground/policies/mock_github.yaml --target playground/targets/ -vvvv 
+          intercept audit --policy playground/policies/mock_github.yaml --target playground/targets/ -vvvv 
